--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
+html{
+    font-size: 10px;
+}
 body{
     background-color: black;
+    height: 1000px;
+overflow: hidden;
+    
 }
 #myVideo {
     position: fixed;
@@ -7,6 +13,12 @@ body{
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
+}
+p{
+    position: relative;
+    font-size: 2vw;
+    color: bisque;
+
 }
 header{
     display:flex;
@@ -38,6 +50,7 @@ nav{
  width:20%;
  border-bottom: 1vh solid  rgba(200, 228, 196, 0.5);
  }
+ 
  textarea{
     display: block;
     width:20vw;
@@ -59,84 +72,137 @@ nav{
 }
   
  textarea:focus {
-    width: 100%;
-outline: none
+    width: 80%;
+   outline: none
   }
  .message-input{
     height: 10vh;
  }
  
- nav a:hover,nav a:focus{
+ nav a:hover,nav a:focus,nav a:active{
     color:rgba(200, 228, 196, 0.5);
  }
- .menu-section ,.contact-section{
-    display: flex;
-    justify-content: space-around;
-    flex-flow: row nowrap;
-    width:60vw;
-    height: 55vh;
-    overflow: hidden;
-   
+ .menu-section ,.contact-section,.about-section{
+    position: absolute;
+    width:80vw;
+    height: 70vh;
+   visibility: hidden;
+   left:10vw;
+   top:20vh;
 }
 .menu-section{
-    position: absolute;
-    left:20%;
-    top:30%;
     visibility: visible;
-   
 }
 
-.mid{
-   
+.menu-section .banner,.about-section{
+    position: relative;
+    display: flex;
+    flex-flow:row  nowrap  ;
     background-color: rgba(200, 228, 196, 0.5);
-    width: 70%;
- 
+    overflow: hidden;
+     border-radius:20px ;
+    -webkit-border-radius:20px ;
+    -moz-border-radius:20px ;
+    -ms-border-radius:20px ;
+    -o-border-radius:20px ;
 }
-.menu-section  img{
-    background-color: aliceblue;
-  width:30%;
+.menu-section .banner{
+    width: 100%;
+    height: 30%;
+}
 
+.menu-section .banner .offer-caption,.about-section .about-caption{
+    width:60%;
+    height: 100%;
+    position: absolute;
+    display:flex;
+    flex-flow: column nowrap ;
+    margin:0 5%;
+    
+   
+    
+   
+}
+
+.menu-section .banner .offer-caption p,.about-section .about-caption p{
+    
+    font-size: 2rem;
+}
+.menu-section .banner img,.about-section img{
+    position:absolute;
+    right:0;
+    width:40%;
+    height: 99%;
+}
+.menu-section .items{
+    display: grid;
+    overflow: auto;
+   margin-top: 5%;
+    width:100%;
+    height: 60%;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto auto;
+}
+.menu-section .items figure img{
+  
+     width: 80%;
+     height: 80%;
+     border-radius:20px ;
+     -webkit-border-radius:20px ;
+     -moz-border-radius:20px ;
+     -ms-border-radius:20px ;
+     -o-border-radius:20px ;
+}
+.menu-section .items figure figcaption{
+    color: bisque;
+    font-size: 3rem;
+    float:right;
 }
 
 .contact-section{
    display: flex;
-    position: fixed;
-    left:20%;
-    top:30%;
-    
-    justify-content: flex-start;
+   
     background-color: rgba(200, 228, 196, 0.5);
     visibility: hidden;
-  font-size: 2vw;
+ 
 }
-p{
-    position: relative;
-    font-size: 2vw;
-
-}
-iframe{
-   position: relative;
-    width: 30%;
-    height: 70%;
-   top: 20%;
-
-    
-
-}
-.copy-right,.designer-name{
+.contact-section form{
     display: flex;
-    color: aliceblue;
-    
-    bottom: 5px;
-    position: fixed;
-    font-size: 1vw;
+    flex-flow: column nowrap;
+    width: 60%;
+    height: 100%;
+}
+.contact-section .contact-us{
+    display: flex;
+    flex-flow: column nowrap;
+    width:40%;
+    height: 100%;
+    color: bisque;
+}
+.contact-section .contact-us iframe{
+    width: 70%;
+    height: 70%;
 }
 .copy-right{
-    left: 5px;
-}
-.designer-name{
-    
-    right: 5px;
-    
+    display: flex;
+    position: fixed;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    color: aliceblue;
+    position: absolute;
+    font-size: 3vw;
+    width: 100%;
+    top:90%;
+ 
+  
 }
 
+.copy-right img,.copy-right p{
+  
+  padding-bottom:3%;   
+   margin-bottom: 10%;
+   height: 80%;
+}
+.copy-right p{
+    margin-right: 1vw;
+}
