--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,12 @@
 html{
     font-size: 10px;
+   
 }
 body{
+    display:block;
     background-color: black;
-    height: 1000px;
-overflow: hidden;
+    min-height: 300vh;
     
-}
-#myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
 }
 p{
     position: relative;
@@ -23,11 +17,11 @@ p{
 header{
     display:flex;
     flex-flow: row nowrap;
-    position: fixed;
+    position: relative;
     color: rgba(255, 255, 255, 0.1);
-  top: 50px;
-  width:100%;
-justify-content: space-between;
+    top: 50px;
+    width:100%;
+  justify-content: space-between;
 
 }
 #logo{
@@ -82,17 +76,8 @@ nav{
  nav a:hover,nav a:focus,nav a:active{
     color:rgba(200, 228, 196, 0.5);
  }
- .menu-section ,.contact-section,.about-section{
-    position: absolute;
-    width:80vw;
-    height: 70vh;
-   visibility: hidden;
-   left:10vw;
-   top:20vh;
-}
-.menu-section{
-    visibility: visible;
-}
+ 
+
 
 .menu-section .banner,.about-section{
     position: relative;
@@ -106,6 +91,7 @@ nav{
     -ms-border-radius:20px ;
     -o-border-radius:20px ;
 }
+
 .menu-section .banner{
     width: 100%;
     height: 30%;
@@ -118,10 +104,6 @@ nav{
     display:flex;
     flex-flow: column nowrap ;
     margin:0 5%;
-    
-   
-    
-   
 }
 
 .menu-section .banner .offer-caption p,.about-section .about-caption p{
@@ -137,9 +119,9 @@ nav{
 .menu-section .items{
     display: grid;
     overflow: auto;
-   margin-top: 5%;
+    margin-top: 5%;
     width:100%;
-    height: 60%;
+   
     grid-template-rows: auto auto auto;
     grid-template-columns: auto auto auto;
 }
@@ -158,12 +140,31 @@ nav{
     font-size: 3rem;
     float:right;
 }
-
+.menu-section{
+    width:80vw;
+    height: 90vh;
+    top:20vh;
+  
+}
+.menu-section ,.contact-section,.about-section{
+    position: relative;
+    left:10vw;
+  
+}
+.about-section{
+    position: relative;
+    width:80vw;
+    height: 50vh;
+    top:120vh;
+   
+}
 .contact-section{
    display: flex;
-   
-    background-color: rgba(200, 228, 196, 0.5);
-    visibility: hidden;
+   justify-content: center;
+   width:80vw;
+   height: 60vh;
+   top:170vh;
+   background-color: rgba(200, 228, 196, 0.5);
  
 }
 .contact-section form{
@@ -183,18 +184,17 @@ nav{
     width: 70%;
     height: 70%;
 }
+
 .copy-right{
     display: flex;
-    position: fixed;
+    position: relative;
     flex-flow: row nowrap;
     justify-content: space-between;
     color: aliceblue;
-    position: absolute;
     font-size: 3vw;
     width: 100%;
-    top:90%;
- 
-  
+    height:5vh ;
+    top:235vh;
 }
 
 .copy-right img,.copy-right p{
@@ -204,5 +204,20 @@ nav{
    height: 80%;
 }
 .copy-right p{
-    margin-right: 1vw;
+    margin-right: 0.5vw;
 }
+.top {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width:15px;
+    padding: 10px 12px;
+    background: rgba(175, 165, 165, 0.3);
+    color: bisque;
+    border-radius: 5px;
+    justify-content: center;
+}
+.top:hover {
+      text-decoration: none;
+      background: rgba(0,0,0,.5);
+    }
